--- a/app/src/main/res/layout/map_fragment_activity.xml
+++ b/app/src/main/res/layout/map_fragment_activity.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.fragment.app.FragmentContainerView
     android:id="@+id/map"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:name="com.naver.maps.map.MapFragment"
-    app:navermap_compassEnabled ="true"
     app:navermap_latitude="35.1798159"
     app:navermap_longitude="129.0750222"
     app:navermap_zoom="15"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" />
+
+
+
     <!--app:navermap_compassEnabled ="true"-->
